# NMTLunabotics2022

./: .dockerignore  .gitignore  Dockerfile  README.md
Motor Tuning/Auger/: AUGER_LOADED.mtr
Motor Tuning/Loco/: LOCO_LEFT_NOTREAD.mtr
arduino/: PitchMotorCode.ino  PitchMotorController.ino  ProgramPitchMotorController.sh
arduino/PitchMotorCode/: PitchMotorCode.ino
arduino/PitchMotorController/: PitchMotorController.ino
arduino/send_test/: send_test.ino
blender/: dump_bin.dae  model_arena.blend  model_arena.blend1  model_arena.mtl  model_arena_demo.blend  model_arena_demo.blend1  model_arena_demo_flat.blend  model_arena_demo_flat.blend1  model_arena_demo_flat.dae  model_arena_demo_flat.mtl  model_arena_demo_flat.stl  robot_old.mtl  ultra-wide-angle-concept.blend  ultra-wide-angle-concept.blend1
cameras/: marker_map_comp.yml
can/kcd/: kayakexample.kcd  x.kcd
can/scripts/: linmap.py  setupCANInterfaces.sh
can/tests/: kayakexample.c  kayakexample.h
docker-scripts/: build  david_hosts  david_key  david_key.pub  david_known_hosts  debug  gamepad
docs/: Ubuntu20_Demo_Instructions.md
docs/setup/: Ubuntu20_Demo_Instructions.md  multimachine.md  tldr.md
lib/: .gitignore
motortuning/Auger/: AUGER_LOADED_2.7ID_PIPE.mtr
motortuning/Depth/: DEPTH_LEFT_NOLOAD.mtr  DEPTH_RIGHT_NOLOAD.mtr
motortuning/Loco/: LOCO_LEFT_GEARBOX_LOADED.mtr  LOCO_LEFT_GEARBOX_LOADED.xml  LOCO_RIGHT_LOADED.mtr  LOCO_RIGHT_NOTREAD.mtr
ros/catkin_ws/: frames.gv
ros/catkin_ws/src/base_controller/: CMakeLists.txt  compile_flags.txt  package.xml
ros/catkin_ws/src/base_controller/include/: main.hpp  teknic.hpp  webots.hpp
ros/catkin_ws/src/base_controller/src/: main.cpp  nav_motor.cpp  teknic  teknic.cpp  webots.cpp
ros/catkin_ws/src/base_controller/src/teknic/: motor_utils.cpp  motor_utils.hpp
ros/catkin_ws/src/david_2dnav/: CMakeLists.txt  base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  move_base.launch  package.xml
ros/catkin_ws/src/david_2dnav/config/: .#costmap_common_params.yaml  base_local_planner_TEMP.yaml  base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_config.yaml
ros/catkin_ws/src/david_2dnav/launch/: move_base.launch
ros/catkin_ws/src/david_action/: CMakeLists.txt  package.xml
ros/catkin_ws/src/david_action/action/: Depth.action  Navigation.action  Pitch.action
ros/catkin_ws/src/david_action/src/: action_tests.cpp  depth.cpp  navigation.cpp  pitch.cpp
ros/catkin_ws/src/david_cam/: CMakeLists.txt  compile_flags.txt  package.xml
ros/catkin_ws/src/david_cam/src/: camera_node.cpp  camera_service.cpp
ros/catkin_ws/src/david_gamepad/: CMakeLists.txt  compile_flags.txt  package.xml
ros/catkin_ws/src/david_gamepad/src/: main.cpp
ros/catkin_ws/src/david_hello/: CMakeLists.txt  compile_flags.txt  package.xml
ros/catkin_ws/src/david_hello/src/: main.cpp
ros/catkin_ws/src/david_motor/: CMakeLists.txt  README.md  compile_flags.nix  compile_flags.txt  package.xml
ros/catkin_ws/src/david_motor/include/: main.hpp  teknic.hpp  webots.hpp
ros/catkin_ws/src/david_motor/msg/: AugerCmd.msg  DepthCmd.msg  DumperCmd.msg
ros/catkin_ws/src/david_motor/src/: main.cpp  nav_motor.cpp  teknic.cpp  webots.cpp
ros/catkin_ws/src/david_pitch/: CMakeLists.txt  compile_flags.txt  package.xml
ros/catkin_ws/src/david_pitch/msg/: PitchCmd.msg
ros/catkin_ws/src/david_pitch/src/: gpio_lib  main.cpp
ros/catkin_ws/src/david_waypoints/: CMakeLists.txt  arucolib  compile_flags.txt  package.xml
ros/catkin_ws/src/david_waypoints/launch/: run_camera.launch  start_vision_system.launch
ros/catkin_ws/src/david_waypoints/src/: waypoints.cpp
ros/catkin_ws/src/nav_dummy/: CMakeLists.txt  README.md  compile_flags.txt  package.xml
ros/catkin_ws/src/nav_dummy/include/: main.hpp
ros/catkin_ws/src/nav_dummy/src/: main.cpp
ros/catkin_ws/src/pitch_controller/: CMakeLists.txt  compile_flags.txt  package.xml
ros/catkin_ws/src/pitch_controller/src/: main.cpp
ros/catkin_ws/src/robot_kbd/: CMakeLists.txt  README.md  compile_flags.txt  package.xml
ros/catkin_ws/src/robot_kbd/launch/: README.md  robot_kbd.launch
ros/catkin_ws/src/robot_kbd/src/: controller.cpp
ros/launch/: .#slam_gmapping.launch  david_config.launch  slam_gmapping.launch  slam_hector.launch  transforms.launch
ros/maps/: hector.yaml  test.yaml  test.yaml.yaml  weir.yaml  weir_gmapping.yaml
ros/python_demo/: talker.py
ros/robot_kbd/: CMakeLists.txt  README.md
ros/robot_kbd/include/: controller.hpp
ros/robot_kbd/src/: controller.cpp
ros_demos/rust/: Cargo.toml
scripts/: UnifySSIDChange.sh  connect_robot  control_connect  gamepad_connect  launch_visualization  ros_connect_demo  setchan  setssid  setup_routing  setup_routing.sh  sim_basic.sh  sim_cams.sh  start_ai_system  start_camera  start_camera_dup  start_control_system  start_david
scripts/ssid_scripts/: ath0.cfg  ath2.cfg
teknic/ExarKernelDriver/: xr_usb_serial_common.c
teknic/doc/: S-FoundationRef.chm  readme.txt
user/: README.md
user/abethel/: format_all.sh  robot_measurements.org
user/shughes/arucoTest/: .aruco_simple.cpp.swp  .board_test.cpp.swp  CMakeLists.txt  aruco_simple.cpp
user/shughes/arucoboard/: CMakeLists.txt  testboard.cpp  webcamcali.yml
utils/camera/calibration/: CMakeLists.txt  CMakelists.txt  arucolib  take_pic.cpp
utils/gpio_lib/: rpi_gpio.cpp  rpi_gpio.hpp
utils/motor_bluetooth/: .gitignore  8Bitdoh.hpp  Makefile  a.out  a2.txt  bluetooth_motor_control  build  joystick.cc  joystick.hh  motor  motor_bluetooth.cpp  motor_utils.cpp  multi_motor_test.cpp  single_motor_test.cpp  single_motor_test.hpp
utils/motor_lib/: motor_utils.cpp  motor_utils.hpp
webots/robots/: david.wbo
webots/worlds/: .lidardemo.wbproj  .lunabotics.wbproj  .lunabotics2.wbproj  .lunabotics_TEST_FLAT.wbproj  .lunabotics_ai.wbproj  .lunabotics_fixing_not_rotating.wbproj  .lunabotics_fixing_sliding.wbproj  .lunabotics_tracked_animated.wbproj  .new.wbproj  lidardemo.wbt  lunabotics.wbt  lunabotics_TEST_FLAT.wbt  (+2 more)
(+81 files in other folders)
