<?xml version="1.0"?>
<package format="2">
  <name>david_action</name>
  <version>0.0.0</version>
  <description>
    The david_action package contains all the action server
    implementation for the high level control of the autonomous
    system.
  </description>

  <maintainer email="skyler.hughes@student.nmt.edu">shastro</maintainer>
  <maintainer email="alexander.bethel@student.nmt.edu">shastro</maintainer>

  <license>BSD</license>

  <build_depend>actionlib_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
</package>
