<?xml version="1.0"?>
<package format="2">
  <name>david_gamepad</name>
  <version>0.0.0</version>
  <description>
    The david_gamepad package contains the node for bluetooth gamepad
    control using the 8BitPro 2 bluetooth controller. Publishes to the
    motor control topics as well as Geometry_Msgs/Twist
  </description>
  <maintainer email="alexander.bethel@student.nmt.edu">Alexander Bethel</maintainer>
  <license>GPLv3</license>

  <url type="website">https://www.nmtlunabotics.com/</url>
  <url type="repository">https://github.com/shastro/NMTLunabotics2022</url>
  <author email="alexander.bethel@student.nmt.edu">Alex Bethel</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>david_motor</build_depend>
  <exec_depend>david_motor</exec_depend>
</package>
