<?xml version="1.0"?>
<package>
  <name>david_motor</name>
  <version>0.1.0</version>
  <description>
    Conversion node from navigation stack commands to motor commands.
  </description>
  <maintainer email="alexander.bethel@student.nmt.edu">Alexander Bethel</maintainer>
  <license>GPLv3</license>

  <url type="website">https://www.nmtlunabotics.com/</url>
  <url type="repository">https://github.com/shastro/NMTLunabotics2022</url>
  <author email="alexander.bethel@student.nmt.edu">Alex Bethel</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roscpp_serialization</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>rostime</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>rosconsole</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roscpp_serialization</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>rostime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
</package>
