<?xml version="1.0"?>
<package format="2">
  <name>david_waypoints</name>
  <version>0.0.0</version>
  <description>
    The david_waypoints package is designed to locate the points in
    the Lunabotics competition that need to be navigated to in the
    different steps. Currently, the approach is to use cameras to
    locate an ArUco board attached to the collection bin, then measure
    the mining area etc. off of that.
  </description>

  <maintainer email="Alexander.Bethel@student.nmt.edu">
    Alexander Bethel
  </maintainer>
  <maintainer email="skyler.hughes@student.nmt.edu">
    Skyler Hughes
  </maintainer>

  <license>GPLv3</license>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>image_transport</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>tf2</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

</package>
