<?xml version="1.0"?>
<package format="2">
  <name>pitch_controller</name>
  <version>0.0.0</version>
  <description>
    The pitch_controller package uses the raspberry pi's GPIO pins to
    communicate with an arduino board on the other end, which uses an
    H-bridge to communicate with the pitch motors. The pitch motors
    are the only non-Teknic motors on the robot, and thus need to be
    controlled in a completely different manner.
  </description>

  <maintainer email="skyler.hughes@student.nmt.edu">shastro</maintainer>
  <maintainer email="alexander.bethel@student.nmt.edu">shastro</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>message_runtime</exec_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
